# caisi-cyber-evals

./: .gitignore  README.md  pyproject.toml
docs/: ctf_archive.md
src/ucb/: __init__.py  _registry.py  cli.py  env.example
src/ucb/agents/: agents.py  ctf_archive_agent.py  cyber_tools.py  gaas.py  prompts.py  utils.py
src/ucb/benchmarks/cve-bench/: LICENSE
src/ucb/benchmarks/cve-bench/CVE-2024-32964/: samples.yaml
src/ucb/benchmarks/cve-bench/CVE-2024-32986/: .env  cve.txt  samples.yaml
src/ucb/benchmarks/cve-bench/CVE-2024-34359/: .gitignore  compose.yml  writeup.txt
src/ucb/benchmarks/cve-bench/CVE-2024-4323/: cve.txt  writeup.txt
src/ucb/benchmarks/cve-bench/CVE-2024-4701/: compose.yml  writeup.txt
src/ucb/benchmarks/cve-bench/CVE-2024-5084/: .env  compose.yml  cve.txt  samples.yaml
src/ucb/benchmarks/cve-bench/CVE-synthetic-0/: compose.yml  writeup.txt
src/ucb/benchmarks/cybench/avatar/: compose.yml
src/ucb/benchmarks/cybench/chunky/: compose.yml
src/ucb/benchmarks/cybench/crushing/: samples.yaml
src/ucb/benchmarks/cybench/delulu/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/diffecient/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/eval_me/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/ezmaze/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/failproof/: compose.yml
src/ucb/benchmarks/cybench/flag_command/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/flecks_of_gold/: samples.yaml
src/ucb/benchmarks/cybench/frog_waf/: compose.yml
src/ucb/benchmarks/cybench/it_has_begun/: samples.yaml
src/ucb/benchmarks/cybench/just_another_pickle_jail/: compose.yml
src/ucb/benchmarks/cybench/labyrinth_linguist/: compose.yml
src/ucb/benchmarks/cybench/locktalk/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/lootstash/: samples.yaml
src/ucb/benchmarks/cybench/motp/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/network_tools/: compose.yml
src/ucb/benchmarks/cybench/noisier_crc/: compose.yml
src/ucb/benchmarks/cybench/noisy_crc/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/packedaway/: samples.yaml
src/ucb/benchmarks/cybench/partial_tenacity/: samples.yaml
src/ucb/benchmarks/cybench/randsubware/: compose.yml
src/ucb/benchmarks/cybench/robust_cbc/: compose.yml
src/ucb/benchmarks/cybench/rpgo/: samples.yaml
src/ucb/benchmarks/cybench/shuffled_aes/: compose.yml
src/ucb/benchmarks/cybench/unbreakable/: compose.yml  samples.yaml
src/ucb/benchmarks/cybench/urgent/: samples.yaml
src/ucb/benchmarks/test/blank_tool/: README.md  (+1 more)
src/ucb/containers/: blank_target.yml  compose.yml  pwn_college.yml
src/ucb/containers/agent/: Dockerfile  helper  packages.txt  requirements.txt
src/ucb/containers/gaas/: Dockerfile  app.py  requirements.txt
src/ucb/containers/ghidra/: Dockerfile
src/ucb/containers/pwn_college/: Dockerfile
src/ucb/tasks/: ctf_archive.py  dataset.py  prompts.py  task.py  utils.py
(+193 files in other folders)
