[project]
name = "ucb"
version = "2.0.0"
description = "US AISI Unified Cyber Benchmark"
authors = [
      {name = "Andrew Fasano", email = "Andrew.Fasano@nist.gov"},
      {name = "Maia Hamin", email = "Maia.Hamin@nist.gov"},
]
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "aiobotocore>=2.21.1",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.11.14",
    "aioitertools>=0.12.0",
    "aiosignal>=1.3.2",
    "annotated-types>=0.7.0",
    "anthropic>=0.53.0",
    "anyio>=4.9.0",
    "attrs>=25.3.0",
    "beautifulsoup4>=4.13.3",
    "botocore>=1.37.1",
    "certifi>=2025.1.31",
    "click>=8.1.8",
    "debugpy>=1.8.13",
    "distro>=1.9.0",
    "docstring-parser>=0.16",
    "frozenlist>=1.5.0",
    "fsspec>=2024.12.0",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "ijson>=3.3.0",
    "inspect-ai>=0.3.93",
    "inspect-cyber==0.1.0",
    "jiter>=0.8.2",
    "jmespath>=1.0.1",
    "jsonlines>=4.0.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2024.10.1",
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "mdurl>=0.1.2",
    "mmh3>=5.1.0",
    "multidict>=6.2.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.4",
    "openai>=1.78.0",
    "platformdirs>=4.3.7",
    "propcache>=0.3.0",
    "psutil>=7.0.0",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pygments>=2.19.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.2",
    "pyyaml>=6.0.2",
    "referencing>=0.36.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rpds-py>=0.23.1",
    "s3fs>=2024.12.0",
    "semver>=3.0.4",
    "shortuuid>=1.0.13",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.6",
    "tenacity>=9.0.0",
    "textual>=2.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.12.2",
    "uc-micro-py>=1.0.3",
    "urllib3>=2.3.0",
    "wrapt>=1.17.2",
    "yarl>=1.18.3",
    "zipp>=3.21.0",
]

[project.entry-points.inspect_ai]
ucb = "ucb._registry"

[build-system]
requires = ["setuptools>=61.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ucb*"]

[tool.setuptools.package-data]
"ucb" = [
    "env.example",
    "containers/*.yml",
    "containers/agent/**",
    "containers/gaas/**",
    "benchmarks/**",
]


[project.scripts]
ucb = "ucb.cli:main"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "src/ucb/__init__.py"
search = "version='{current_version}'"
replace = "version='{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
